# Platbox

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat  build.sh
DxeBackdoor/: DxeBackdoor.depex  DxeBackdoor.efi  notes.txt
Platbox/linux/driver/: Makefile  install.sh  kernetix.c  low_level_functions.asm
Platbox/linux/include/: kernetix.h
Platbox/windows/Platbox/: CbHooks.c  Platbox.c  Platbox.vcxproj  Platbox.vcxproj.filters
PlatboxClient/: CMakeLists.txt  Makefile  PlatboxClient.cpp  PlatboxClient.h  README.md  build.bat
PlatboxClient/DeltaFuzz/: CMakeLists.txt  DeltaFuzz.c  DeltaFuzz.h
PlatboxClient/inc/: PlatboxClient.h  UEFIVars.h  Util.h  global.h  msr.h  pci.h  physmem.h
PlatboxClient/inc/amd/: amd_chipset.h
PlatboxClient/inc/intel/: intel_chipset.h
PlatboxClient/inc/smm/: smi_fuzz.h  smm_communicate.h
PlatboxClient/inc/windows/: __win.h
PlatboxClient/src/: PlatboxClient.cpp  UEFIVars.cpp  Util.cpp  common_chipset.cpp  global.cpp  msr.cpp  pci.cpp  physmem.cpp
PlatboxClient/src/amd/: amd_chipset.cpp
PlatboxClient/src/intel/: intel_chipset.cpp
PlatboxClient/src/smm/: smi_fuzz.cpp  smm_communicate.cpp
PlatboxClient/src/windows/: acpidump.cpp  kernelHookCb.cpp
PlatboxDrv/linux/driver/: kernetix.c  low_level_functions.asm  reload.sh
PlatboxDrv/linux/include/: kernetix.h
PlatboxDrv/windows/: Platbox.sln
PlatboxDrv/windows/Platbox/: CbHooks.h  Platbox.c  Platbox.h  Platbox.inf  Platbox.vcxproj  low_level_functions.asm  x86Bios.c  x86Bios.h
PlatboxLib/: CMakeLists.txt  README.md
PlatboxLib/DeltaFuzz/: CMakeLists.txt  DeltaFuzz.c  DeltaFuzz.h  DeltaFuzzLib.lib  README.md
PlatboxLib/inc/: UEFIVars.h  Util.h  _io.h  common_chipset.h  global.h  msr.h  pci.h  physmem.h  types.h
PlatboxLib/inc/amd/: amd_acpi.h  amd_chipset.h  amd_psp.h  amd_spi.h
PlatboxLib/inc/intel/: intel_chipset.h  intel_gpio.h  intel_pch_regs_gpio.h
PlatboxLib/inc/smm/: smi.h  smm_communicate.h
PlatboxLib/inc/windows/: __win.h
PlatboxLib/src/: UEFIVars.cpp  Util.cpp  _run_attempt.asm  common_chipset.cpp  global.cpp  io.cpp  msr.cpp  pci.cpp  physmem.cpp
PlatboxLib/src/amd/: amd_acpi.cpp  amd_chipset.cpp  amd_psp.cpp  amd_spi.cpp
PlatboxLib/src/intel/: intel_chipset.cpp  intel_gpio.cpp
PlatboxLib/src/smm/: smi.cpp  smi_fuzz.cpp  smm_communicate.cpp
PlatboxLib/src/windows/: acpidump.cpp  page_tables.cpp
SmmBackdoor/: README.md  SmmBackdoor.c  SmmBackdoor.depex  SmmBackdoor.efi  SmmBackdoor.inf
compiled/: Platbox.cer  Platbox.inf  Platbox.sys  example  platbox_cli
docs/: smm_future.txt
pocs/: CMakeLists.txt  README.md  poc.cpp  poc.h
pocs/Acer/: CVE-2023-28468.cpp  SmmCallout.cpp
pocs/AmdSinkclose/: sinkclose.cpp  sinkclose.s
pocs/Huawei/: CVE-2023-28468.cpp
pocs/Misc/: SecSMIFlash.cpp  SmmKeyDemo.cpp
pocs/SecureCoreAcer/: DirectSpiAccess.cpp
tools/: add-env.ps1  bootscript-parser3.py  decode_mmio.py  efs_parser.py  rom_armor_psp_policy.py
tools/amd_smram_parser/: amd_smram_parser.py  ctypes_utils.py
tools/smm_supervisor_policy_parser/: README.md  policy_entry.py  smm-supervisor-policy-parser.py
